# boom

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  config.default.yaml  config.yaml  docker-compose.default.yaml  docker-compose.yaml  ml_worker.py  requirements.txt
.github/workflows/: build.yaml  test.yaml
api/: Cargo.toml  README.md
api/src/: auth.rs  bodies.rs  catalogs.rs  conf.rs  db.rs  docs.rs  filters.rs  lib.rs  main.rs  mongodb.rs
api/src/api/: alerts.rs  catalogs.rs  filters.rs  mod.rs  query.rs  users.rs
api/src/models/: filter_models.rs  mod.rs  query_models.rs  response.rs
api/src/routes/: alerts.rs  auth.rs  catalogs.rs  filters.rs  info.rs  mod.rs  objects.rs  queries.rs  query.rs  surveys.rs  users.rs
api/tests/: test_auth.rs  test_catalogs.rs  test_query.rs  test_users.rs
api/tests/data/filters/: test_post_filter_query_body.json
benches/: README.md  benchmark_util.rs  filter_benchmark.rs
data/filters/: basic.json  fast.json  lsst.json
data/models/: acai_b.d1_dnn_20201130.onnx  acai_h.d1_dnn_20201130.onnx  acai_h_20240731_130724.keras  acai_n.d1_dnn_20201130.onnx  acai_o.d1_dnn_20201130.onnx  acai_v.d1_dnn_20201130.onnx  btsbot-v1.0.1.onnx
docs/: alert-processing.md  data-model.md
docs/tracing-throughput-test/: tracing-throughput-test.md  tracing-throughput-test.py
py_workers/: config.py  ml_utils.py  ml_worker.py  mongo.py
schema/ztf/: candidate.avsc  fp_hist.avsc
scripts/: convert2onnx.py  throughput_test.sh
scripts/convert2onnx/: convert2onnx.py  requirements.txt
src/: alert.rs  alert_worker.rs  conf.rs  coordinates.rs  db.rs  fake_ml_worker.rs  filter.rs  filter_worker.rs  kafka.rs  lib.rs  scheduling.rs  spatial.rs  testing_util.rs  time.rs  types.rs  worker_util.rs
src/alert/: base.rs  decam.rs  lsst.rs  mod.rs  ztf.rs
src/filter/: base.rs  lsst.rs  mod.rs  ztf.rs
src/kafka/: base.rs  decam.rs  lsst.rs  mod.rs  ztf.rs
src/ml/: base.rs  mod.rs  ztf.rs
src/ml/models/: acai.rs  base.rs  btsbot.rs  mod.rs
src/scheduler/: base.rs  mod.rs
src/utils/: conversions.rs  data.rs  db.rs  enums.rs  fits.rs  mod.rs  o11y.rs  spatial.rs  testing.rs  worker.rs
tests/: README.md  config.test.yaml  test_conf.rs  test_coordinates.rs  test_decam.rs  test_filter.rs  test_kafka.rs  test_lsst.rs  test_spatial.rs  test_types.rs  test_ztf.rs  testing_util.rs
tests/data/: config.test.yaml
tests/data/alerts/decam/: alert.avro
tests/data/alerts/lsst/: 0.avro
tests/data/alerts/ztf/: 2695378462115010012.avro
