[workspace]
resolver = "3"
members = ["api"]

[package]
name = "boom"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.17.0"
chrono = "0.4.39"
config = "0.15.6"
constcat = "0.6.0"
clap = { version = "4", features = ["derive"] }
flare = "0.1.0"
futures = "0.3.31"
mongodb = "3.2.0"
rdkafka = { version = "0.37.0", features = ["gssapi", "ssl"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12", features = ["v4"] }
flate2 = "1.1.0"
anyhow = "1.0.96"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
async-trait = "0.1.87"
serde_with = "3.12.0"
ort = { version = "=2.0.0-rc.9", features = ["cuda"] }
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }
ndarray = "0.16.1"
rand = "0.9.0"
openssl = { version = "0.10.72", features = ["vendored"] }
tempfile = "3.20.0"
indicatif = "0.17.11"

[dev-dependencies]
criterion = "0.5"
rsgen-avro = "0.15.3"
