[package]
name = "boom-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.17.0"
config = "0.15.11"
futures = "0.3.31"
mongodb = "3.1.0"
serde = "1.0.215"
serde_json = "1.0.138"
env_logger = "0.11.8"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]
